# teleop

./: README.md  main.py
client/: CMakeLists.txt  client.cpp  joystick.cpp  joystick.h  main.py
client/cereal/: custom.capnp
server/: CMakeLists.txt  main.py  mavlink-bridge.cpp  mavlink-bridge.hpp  requirements.txt  server.cpp
